fixed `z-index`es of popup and outer navigation

--- a/src/styles/OuterNavigation.module.scss
+++ b/src/styles/OuterNavigation.module.scss
@@ -8,7 +8,7 @@
   top: 0;
   right: 10px;
   height: 40px;
-  z-index: 99;
+  z-index: 999999;
 }
 
 .action {
