--- a/src/styles/Popup.module.scss
+++ b/src/styles/Popup.module.scss
@@ -7,7 +7,7 @@
   right: 0;
   bottom: 0;
   background: rgba(0, 0, 0, .5);
-  z-index: 999998;
+  z-index: 99998;
 }
 
 .overlay {
@@ -29,10 +29,10 @@
   top: 50%;
   left: 50%;
   transition: .2s ease-in-out;
-  z-index: 999999;
-  width: calc(28.125rem - 3.75rem);
+  z-index: 99999;
+  width: calc(60% - 3.75rem);
+  max-width: calc(31.25rem - 3.75rem);
   height: auto;
-  max-width: 80%;
   background: $surfaceSecondary;
   border-radius: 1rem;
   padding: 1.875rem;
@@ -50,10 +50,10 @@
 
 .icon {
   position: absolute;
-  z-index: 999999;
+  z-index: 99999;
   top: 0.9375rem;
   right: 0.9375rem;
-  font-size: $_largerText;
+  font-size: 1.5rem;
   color: $textDark;
   opacity: .99;
   transition: .3s;
